fix menu z-index

--- a/src/renderer/window/styles.css
+++ b/src/renderer/window/styles.css
@@ -32,7 +32,7 @@
 
 .menu-content,
 .menu-sub-content {
-  @apply level-0 drop-shadow-lg py-1;
+  @apply level-0 drop-shadow-lg py-1 z-10;
   min-width: 220px;
   will-change: transform, opacity;
   border: 1px solid var(--border-color);
